horizontal scroll fixed

--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,10 @@ body{
 	
 }
 
+.container-flex .row{
+	width: 100%;
+}
+
 /*** HEADER ***/
 .webmenu{
 	display: block;
